--- a/gonu-resume-website/package.json
+++ b/gonu-resume-website/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
+    "react-headroom": "^3.1.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
