--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd gonu-resume-website && npm install && npm start\""
+    "start": "cd gonu-resume-website && npm install && npm start\"",
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
