--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "concurrently \" node index.js \" \"cd gonu-resume-website && npm install && npm start\"",
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
