--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \" node index.js \" \"cd gonu-resume-website && npm install && npm start\"",
+    "start": "node index.js \"cd gonu-resume-website && npm install && npm start\"",
     "heroku-postbuild": "npm run build"
   },
   "author": "",
