--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "node index.js \"cd gonu-resume-website && npm install && npm start\"",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "14.1.0",
+    "npm": "6.14.9"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
