--- a/gonu-resume-website/package.json
+++ b/gonu-resume-website/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-headroom": "^3.1.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-native-video": "^5.1.0-alpha8",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
@@ -19,6 +21,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "14.1.0",
+    "npm": "6.14.9"
   },
   "eslintConfig": {
     "extends": [
